--- a/pb_hooks/pages/xapi/tochka/auto-sync.ejs
+++ b/pb_hooks/pages/xapi/tochka/auto-sync.ejs
@@ -4,6 +4,8 @@
  * GET /xapi/tochka/auto-sync
  */
 
+meta('layout', false);
+
 if ($req.method !== 'GET') {
   response.status = 405
   response.json({
