--- a/pb_hooks/pages/xapi/tochka/config-info.ejs
+++ b/pb_hooks/pages/xapi/tochka/config-info.ejs
@@ -4,6 +4,8 @@
  * Получение информации о текущей конфигурации (для отладки)
  */
 
+meta('layout', false);
+
 if (request.method !== 'GET') {
   return response.json(405, { 
     success: false,
