--- a/pb_hooks/pages/xapi/tochka/statements-list.ejs
+++ b/pb_hooks/pages/xapi/tochka/statements-list.ejs
@@ -4,6 +4,8 @@
  * Получение списка всех доступных выписок из Точка банка
  */
 
+meta('layout', false);
+
 // Проверка метода запроса
 if (request.method !== 'GET') {
   return response.json(405, { 
@@ -37,4 +39,5 @@ return response.json(200, {
   data: result.data,
   synced_at: new Date().toISOString()
 });
+%>
 %>
